sample/retrieveUnpackaged/objects/Event_Caller__c.object
<CustomObject>
    <fields>
        <fullName>Caller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caller</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Callers</relationshipLabel>
        <relationshipName>Event_Callers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEW_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SEW Event</label>
        <referenceTo>SEW_Event__c</referenceTo>
        <relationshipLabel>Event Callers</relationshipLabel>
        <relationshipName>Event_Callers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event Caller</label>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Event Caller Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Callers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>